<resources>
    <string name="app_name">Goals Tracker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="nav_label_goals">Goals in Progress</string>
    <string name="nav_label_goal_details">Details</string>
    <string name="nav_label_save_goal">Save Goal</string>
    <string name="nav_label_checkpoints">Checkpoints</string>
    <string name="nav_label_save_checkpoint">Save checkpoint</string>
    <string name="nav_label_checkpoint_details">Checkpoint Details</string>
    <string name="nav_label_register">Create an Account</string>
    <string name="nav_label_login">Access your Account</string>
    <string name="nav_label_completed_goals">Completed Goals</string>
    <string name="bottom_nav_progress">In Progress</string>
    <string name="bottom_nav_completed">Completed</string>
    <string name="checkpoint_save_checkpoint">Save checkpoint</string>
    <string name="goal_save_goal">Save goal</string>
    <string name="goals_sign_out">Sign Out</string>
    <string name="empty_list_icon">Empty list icon</string>
    <string name="empty_list_text">The list is empty. Try adding an item.</string>
    <string name="checkpoint_image">Checkpoint Image</string>
    <string name="checkpoint_form_description">Description</string>
    <string name="checkpoint_form_pick_an_image">Pick an Image</string>
    <string name="checkpoint_form_get_location">Get Location</string>
    <string name="login_your_email">Your email</string>
    <string name="login_your_password">Your password</string>
    <string name="login_enter">Enter</string>
    <string name="login_create_an_account">Create an Account</string>
    <string name="register_full_name">Full name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_register">Register</string>
    <string name="goal_details_milestones">Milestones</string>
    <string name="goal_details_add_milestone">Add milestone</string>
    <string name="goal_details_edit_goal">Edit goal</string>
    <string name="goal_details_see_checkpoints">See checkpoints</string>
    <string name="goal_sheet_save_milestone">Save milestone</string>
    <string name="goal_sheet_milestone_title">Milestone\'s title</string>
    <string name="goal_sheet_save">Save</string>
    <string name="goal_form_title">Title</string>
    <string name="goal_form_description">Description</string>
    <string name="goal_form_choose_date">Choose Date</string>
    <string name="goal_form_category">Category</string>
    <string name="goal_form_priority">Priority</string>
    <string name="category_icon">Category icon</string>
    <string name="goal_priority_image">Goal priority image</string>
    <string name="goal_category_icon">Goal category icon</string>
    <string name="goal_target_date_icon">Goal target date icon</string>
    <string name="priority_icon">Priority icon</string>
    <string name="field_empty">This field cannot be empty.</string>
    <string name="field_invalid_email">Invalid email address.</string>
    <string name="field_invalid_password">Invalid password, must be longer than 5.</string>
    <string name="invalid_fields">Check your fields.</string>
    <string name="generic_error_message">Something went wrong.</string>
    <string name="no_description">No description added.</string>
    <string name="fetching_location">Fetching location…</string>
    <string name="provider_disabled">Your location won\'t be updated.</string>
    <string name="location_snippet">Your location</string>
    <string name="no_location">No location added.</string>
    <string name="dialog_title">Delete Item</string>
    <string name="dialog_message">Are you sure you want to delete this item?</string>
    <string name="dialog_positive">YES</string>
    <string name="dialog_negative">Cancel</string>
    <string name="snack_title">Item deleted.</string>
    <string name="snack_action">UNDO</string>
    <string name="permission_title">Permissions Denied</string>
    <string name="permission_message">To use this feature you must grant the required permissions.</string>
    <string name="permission_neutral">OK</string>
    <string name="fitness_label">Fitness</string>
    <string name="work_label">Work</string>
    <string name="school_label">School</string>
    <string name="social_label">Social life</string>
    <string name="love_label">Love life</string>
    <string name="travel_label">Travel</string>
    <string name="purchase_label">Purchase</string>
    <string name="financial_label">Financial</string>
    <string name="low_label">Low</string>
    <string name="medium_label">Medium</string>
    <string name="high_label">High</string>
    <string name="bottom_nav_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="nav_label_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="image_required_alert">Please choose a profile image.</string>
    <string name="goal_almost_complete_title">Goal Almost Complete</string>
    <string name="goal_almost_complete_description">Congrats!</string>
    <string name="goal_almost_complete_long_description_start">\"Your goal \"</string>
    <string name="goal_almost_complete_long_description_end">\" is almost complete! Keep it up!\"</string>
    <string name="goal_expiring_title">Goal Expiring</string>
    <string name="goal_expiring_description">\"Warning about \"</string>
    <string name="goal_expiring_long_description_start">\"Your goal \"</string>
    <string name="goal_expiring_long_description_end">\" is about reach it\'s target date and you haven\'t completed it yet!\"</string>
    <string name="splash_from">Developed By</string>
    <string name="splash_pedro_schwarz">Pedro Schwarz Rodrigues</string>
    <string name="splash_loading">Loading…</string>
    <string name="profile_avatar">Profile avatar</string>
    <string name="profile_goals_summary">Goals Summary</string>
    <string name="profile_completed_goals_count">Completed Goals</string>
    <string name="profile_uncompleted_goals_count">Uncompleted Goals</string>
    <string name="profile_uncompleted_goals_icon">Uncompleted goals icon</string>
    <string name="profile_completed_goals_icon">Completed goals icon</string>
    <string name="goals_tracker_logo">Goals Tracker Logo</string>
    <string name="welcome_to_goals_tracker">Welcome to Goals Tracker</string>
    <string name="invalid_checkpoint_image">Please choose a image for this checkpoint.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="nav_label_full_image">Full Image</string>
    <string name="profile_users_info">User\'s Info</string>
</resources>
