<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="checkpoint"
            type="com.pedro.schwarz.goalstracker.ui.databinding.CheckpointData" />

        <variable
            name="viewModel"
            type="com.pedro.schwarz.goalstracker.ui.viewmodel.CheckpointFormViewModel" />

        <variable
            name="onSelectImage"
            type="android.view.View.OnClickListener" />

        <variable
            name="onSelectLocation"
            type="android.view.View.OnClickListener" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.fragment.CheckpointFormFragment">

            <ProgressBar
                android:id="@+id/checkpoint_form_save_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:indeterminate="true"
                android:visibility="@{viewModel.isSaving ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/checkpoint_form_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:boxBackgroundColor="#00FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkpoint_form_save_progress"
                app:validateField="@{checkpoint.description}">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/checkpoint_form_description"
                    android:inputType="textCapSentences"
                    android:maxLines="4"
                    android:text="@={checkpoint.description}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/checkpoint_form_image_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorAccent"
                android:onClick="@{onSelectImage}"
                android:text="@string/checkpoint_form_pick_an_image"
                app:layout_constraintEnd_toEndOf="@+id/checkpoint_form_description"
                app:layout_constraintStart_toStartOf="@+id/checkpoint_form_description"
                app:layout_constraintTop_toBottomOf="@+id/checkpoint_form_description" />

            <ImageView
                android:id="@+id/checkpoint_form_image"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/checkpoint_image"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkpoint_form_image_btn"
                app:loadImage="@{checkpoint.imageUrl}" />

            <Button
                android:id="@+id/checkpoint_form_location_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:enabled="@{viewModel.isFetchingLocation ? false : true}"
                android:onClick="@{onSelectLocation}"
                android:text="@string/checkpoint_form_get_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkpoint_form_image" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/checkpoint_form_map"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkpoint_form_location_btn" />

            <ProgressBar
                android:id="@+id/checkpoint_form_map_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:indeterminate="true"
                android:visibility="@{viewModel.isFetchingLocation ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkpoint_form_map" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>