<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.pedro.schwarz.goalstracker.ui.databinding.UserData" />

        <variable
            name="viewModel"
            type="com.pedro.schwarz.goalstracker.ui.viewmodel.ProfileViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profile_avatar"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:contentDescription="@string/profile_avatar"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:loadImage="@{user.imageUrl}"
                app:srcCompat="@drawable/image_placeholder" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{user.name}"
                android:textAlignment="center"
                android:textColor="@color/colorDark"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_avatar"
                tools:text="User's name" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{user.email}"
                android:textAlignment="center"
                android:textColor="@color/colorMediumDark"
                app:layout_constraintEnd_toEndOf="@+id/profile_name"
                app:layout_constraintStart_toStartOf="@+id/profile_name"
                app:layout_constraintTop_toBottomOf="@+id/profile_name"
                tools:text="User's email" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@drawable/profile_goals_summary_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_email">

                <TextView
                    android:id="@+id/profile_card_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/profile_goals_summary"
                    android:textAlignment="center"
                    android:textColor="@color/colorLight"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/profile_card_divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:background="@color/colorLight"
                    app:layout_constraintEnd_toEndOf="@+id/profile_card_title"
                    app:layout_constraintStart_toStartOf="@+id/profile_card_title"
                    app:layout_constraintTop_toBottomOf="@+id/profile_card_title" />

                <TextView
                    android:id="@+id/profile_card_completed_goals"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/profile_goals_summary_item_background"
                    android:elevation="2dp"
                    android:text="@string/profile_completed_goals_count"
                    android:textAlignment="center"
                    android:textColor="@color/colorLight"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/profile_card_title"
                    app:layout_constraintStart_toStartOf="@+id/profile_card_title"
                    app:layout_constraintTop_toBottomOf="@+id/profile_card_divider" />

                <ImageView
                    android:id="@+id/profile_completed_count_background"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/profile_completed_goals_icon"
                    android:elevation="3dp"
                    app:layout_constraintBottom_toBottomOf="@+id/profile_card_completed_goals"
                    app:layout_constraintEnd_toEndOf="@+id/profile_card_completed_goals"
                    app:layout_constraintStart_toEndOf="@+id/profile_card_completed_goals"
                    app:layout_constraintTop_toTopOf="@+id/profile_card_completed_goals"
                    app:srcCompat="@drawable/circular_white_background" />

                <TextView
                    android:id="@+id/profile_card_completed_goals_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="3dp"
                    android:text="@{viewModel.completedCount.toString()}"
                    android:textColor="@color/colorDark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/profile_completed_count_background"
                    app:layout_constraintEnd_toEndOf="@+id/profile_completed_count_background"
                    app:layout_constraintStart_toStartOf="@+id/profile_completed_count_background"
                    app:layout_constraintTop_toTopOf="@+id/profile_completed_count_background" />

                <ImageView
                    android:id="@+id/profile_card_completed_goals_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/profile_completed_goals_icon"
                    android:elevation="2dp"
                    app:layout_constraintBottom_toBottomOf="@+id/profile_card_completed_goals"
                    app:layout_constraintEnd_toStartOf="@+id/profile_card_completed_goals"
                    app:layout_constraintStart_toStartOf="@+id/profile_card_completed_goals"
                    app:layout_constraintTop_toTopOf="@+id/profile_card_completed_goals"
                    app:srcCompat="@drawable/completed_goals_background" />

                <TextView
                    android:id="@+id/profile_card_uncompleted_goals"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/profile_goals_summary_item_background"
                    android:elevation="2dp"
                    android:text="@string/profile_uncompleted_goals_count"
                    android:textAlignment="center"
                    android:textColor="@color/colorLight"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/profile_card_completed_goals"
                    app:layout_constraintStart_toStartOf="@+id/profile_card_completed_goals"
                    app:layout_constraintTop_toBottomOf="@+id/profile_card_completed_goals" />

                <ImageView
                    android:id="@+id/profile_uncompleted_count_background"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/profile_uncompleted_goals_icon"
                    android:elevation="3dp"
                    app:layout_constraintBottom_toBottomOf="@+id/profile_card_uncompleted_goals"
                    app:layout_constraintEnd_toEndOf="@+id/profile_card_uncompleted_goals"
                    app:layout_constraintStart_toEndOf="@+id/profile_card_uncompleted_goals"
                    app:layout_constraintTop_toTopOf="@+id/profile_card_uncompleted_goals"
                    app:srcCompat="@drawable/circular_white_background" />

                <TextView
                    android:id="@+id/profile_card_uncompleted_goals_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/profile_uncompleted_goals_icon"
                    android:elevation="3dp"
                    android:text="@{viewModel.uncompletedCount.toString()}"
                    android:textColor="@color/colorDark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/profile_uncompleted_count_background"
                    app:layout_constraintEnd_toEndOf="@+id/profile_uncompleted_count_background"
                    app:layout_constraintStart_toStartOf="@+id/profile_uncompleted_count_background"
                    app:layout_constraintTop_toTopOf="@+id/profile_uncompleted_count_background" />

                <ImageView
                    android:id="@+id/profile_card_uncompleted_goals_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/profile_uncompleted_goals_icon"
                    android:elevation="2dp"
                    app:layout_constraintBottom_toBottomOf="@+id/profile_card_uncompleted_goals"
                    app:layout_constraintEnd_toStartOf="@+id/profile_card_uncompleted_goals"
                    app:layout_constraintStart_toStartOf="@+id/profile_card_uncompleted_goals"
                    app:layout_constraintTop_toTopOf="@+id/profile_card_uncompleted_goals"
                    app:srcCompat="@drawable/uncompleted_goals_background" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
